Remplacement balises icones DIV et I par EM sur toutes les pages

--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -36,8 +36,8 @@
         <div class="one-restaurant__information-heart restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
+              <em class="far fa-heart"></em>
+              <em class="fas fa-heart"></em>
             </div>
           </div>
         </div>
@@ -61,7 +61,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -84,7 +84,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -103,7 +103,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -131,7 +131,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -152,7 +152,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -173,7 +173,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -197,7 +197,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -216,7 +216,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -235,7 +235,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -257,7 +257,7 @@
         <div class="footer__proposition-icon">
           <div class="footer__proposition-icon-container">
             <div class="footer__proposition-icon-insert">
-              <i class="fas fa-utensils"></i>
+              <em class="fas fa-utensils"></em>
             </div>
           </div>
         </div>
@@ -270,7 +270,7 @@
         <div class="footer__proposition-icon">
           <div class="footer__proposition-icon-container">
             <div class="footer__proposition-icon-insert">
-              <i class="fas fa-hands-helping"></i>
+              <em class="fas fa-hands-helping"></em>
             </div>
           </div>
         </div>
