--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="localisation__map-icon">
         <div class="localisation__map-icon-container">
           <div class="localisation__map-icon-insert">
-            <i class="fas fa-map-marker-alt"></i>
+            <em class="fas fa-map-marker-alt"></em>
           </div>
         </div>
       </div>
@@ -71,7 +71,7 @@
         <div class="step-block__icon">
           <div class="step-block__icon-container">
             <div class="step-block__icon-insert">
-              <i class="fas fa-mobile-alt"></i>
+              <em class="fas fa-mobile-alt"></em>
             </div>
           </div>
         </div>
@@ -89,7 +89,7 @@
         <div class="step-block__icon">
           <div class="step-block__icon-container">
             <div class="step-block__icon-insert">
-              <i class="fas fa-list"></i>
+              <em class="fas fa-list"></em>
             </div>
           </div>
         </div>
@@ -107,7 +107,7 @@
         <div class="step-block__icon">
           <div class="step-block__icon-container">
             <div class="step-block__icon-insert">
-              <i class="fas fa-store"></i>
+              <em class="fas fa-store"></em>
             </div>
           </div>
         </div>
@@ -126,8 +126,8 @@
         <div class="restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
+              <em class="far fa-heart"></em>
+              <em class="fas fa-heart"></em>
             </div>
           </div>
         </div>
@@ -142,8 +142,8 @@
         <div class="restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
+              <em class="far fa-heart"></em>
+              <em class="fas fa-heart"></em>
             </div>
           </div>
         </div>
@@ -157,8 +157,8 @@
         <div class="restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
+              <em class="far fa-heart"></em>
+              <em class="fas fa-heart"></em>
             </div>
           </div>
         </div>
@@ -172,8 +172,8 @@
         <div class="restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
+              <em class="far fa-heart"></em>
+              <em class="fas fa-heart"></em>
             </div>
           </div>
         </div>
@@ -191,7 +191,7 @@
         <div class="footer__proposition-icon">
           <div class="footer__proposition-icon-container">
             <div class="footer__proposition-icon-insert">
-              <i class="fas fa-utensils"></i>
+              <em class="fas fa-utensils"></em>
             </div>
           </div>
         </div>
@@ -204,7 +204,7 @@
         <div class="footer__proposition-icon">
           <div class="footer__proposition-icon-container">
             <div class="footer__proposition-icon-insert">
-              <i class="fas fa-hands-helping"></i>
+              <em class="fas fa-hands-helping"></em>
             </div>
           </div>
         </div>
