--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -36,8 +36,8 @@
         <div class="one-restaurant__information-heart restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
+              <em class="far fa-heart"></em>
+              <em class="fas fa-heart"></em>
             </div>
           </div>
         </div>
@@ -61,7 +61,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -82,7 +82,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -105,7 +105,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -128,7 +128,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -156,7 +156,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -177,7 +177,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -198,7 +198,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -226,7 +226,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -247,7 +247,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -268,7 +268,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -290,7 +290,7 @@
         <div class="footer__proposition-icon">
           <div class="footer__proposition-icon-container">
             <div class="footer__proposition-icon-insert">
-              <i class="fas fa-utensils"></i>
+              <em class="fas fa-utensils"></em>
             </div>
           </div>
         </div>
@@ -303,7 +303,7 @@
         <div class="footer__proposition-icon">
           <div class="footer__proposition-icon-container">
             <div class="footer__proposition-icon-insert">
-              <i class="fas fa-hands-helping"></i>
+              <em class="fas fa-hands-helping"></em>
             </div>
           </div>
         </div>
