--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -36,8 +36,8 @@
         <div class="one-restaurant__information-heart restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
+              <em class="far fa-heart"></em>
+              <em class="fas fa-heart"></em>
             </div>
           </div>
         </div>
@@ -63,7 +63,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -86,7 +86,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -105,7 +105,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -131,7 +131,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -152,7 +152,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -175,7 +175,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -203,7 +203,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -222,7 +222,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -245,7 +245,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -267,7 +267,7 @@
         <div class="footer__proposition-icon">
           <div class="footer__proposition-icon-container">
             <div class="footer__proposition-icon-insert">
-              <i class="fas fa-utensils"></i>
+              <em class="fas fa-utensils"></em>
             </div>
           </div>
         </div>
@@ -280,7 +280,7 @@
         <div class="footer__proposition-icon">
           <div class="footer__proposition-icon-container">
             <div class="footer__proposition-icon-insert">
-              <i class="fas fa-hands-helping"></i>
+              <em class="fas fa-hands-helping"></em>
             </div>
           </div>
         </div>
