--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -36,8 +36,8 @@
         <div class="one-restaurant__information-heart restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
+              <em class="far fa-heart"></em>
+              <em class="fas fa-heart"></em>
             </div>
           </div>
         </div>
@@ -61,7 +61,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -84,7 +84,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -105,7 +105,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -133,7 +133,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -156,7 +156,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -175,7 +175,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -199,7 +199,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -222,7 +222,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -243,7 +243,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-check"></div>
+                  <em class="fas fa-check"></em>
                 </div>
               </div>
             </div>
@@ -265,7 +265,7 @@
         <div class="footer__proposition-icon">
           <div class="footer__proposition-icon-container">
             <div class="footer__proposition-icon-insert">
-              <i class="fas fa-utensils"></i>
+              <em class="fas fa-utensils"></em>
             </div>
           </div>
         </div>
@@ -278,7 +278,7 @@
         <div class="footer__proposition-icon">
           <div class="footer__proposition-icon-container">
             <div class="footer__proposition-icon-insert">
-              <i class="fas fa-hands-helping"></i>
+              <em class="fas fa-hands-helping"></em>
             </div>
           </div>
         </div>
