Ajout d'un dossier PAGES, modification des liens relatifs

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="./public/css/style.css" />
+    <link rel="stylesheet" href="../public/css/prefixed/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,25 +14,25 @@
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/0aeff487f3.js" crossorigin="anonymous"></script>
-    <title>La note enchantée</title>
+    <title>À la française</title>
   </head>
 
   <body>
     <!-- HEADER -->
     <header class="header">
-      <a href="./index.html" class="fas fa-arrow-left"></a>
-      <img class="logo-ohmyfood" src=./public/img/logo/ohmyfood.png alt="logo
+      <a href="../index.html" class="fas fa-arrow-left"></a>
+      <img class="logo-ohmyfood" src=../public/img/logo/ohmyfood.png alt="logo
       d'ohmyfood"/>
     </header>
 
     <div class="one-restaurant-img">
-      <img class="one-restaurant-img__img" src=./public/img/note_enchantee.jpg
-      alt="plat proposé chez La note enchantée"/>
+      <img class="one-restaurant-img__img" src=../public/img/a_la_francaise.jpg
+      alt="plat proposé chez À la française"/>
     </div>
 
     <main class="one-restaurant">
       <div class="one-restaurant__information">
-        <div class="one-restaurant__information-name">La note enchantée</div>
+        <div class="one-restaurant__information-name">À la française</div>
         <div class="one-restaurant__information-heart restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
@@ -49,10 +49,12 @@
 
         <div class="part__block part__block--first">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Ravioles de foie gras</div>
+            <div class="part__block-choice-first">
+              Tartare de poulpe acidulé
+            </div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Accompagnés de leur crème à la truffe</span
+                >Aux zestes d'orange</span
               >
               <span class="part__block-choice-price">25€</span>
             </div>
@@ -70,10 +72,12 @@
 
         <div class="part__block part__block--second">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Caviar osciètre</div>
+            <div class="part__block-choice-first">
+              Velouté de légumes d'antan
+            </div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Sur blini à la farine de blé noir</span
+                >Carotte, panais, topinambour</span
               >
               <span class="part__block-choice-price">35€</span>
             </div>
@@ -91,37 +95,10 @@
 
         <div class="part__block part__block--third">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">
-              Homard et espuma de potiron
-            </div>
+            <div class="part__block-choice-first">Soupe à l'oignon</div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision"
-                >Mariné aux zestes d'orange</span
-              >
+              <span class="part__block-choice-precision">Revisitée</span>
               <span class="part__block-choice-price">20€</span>
-            </div>
-          </div>
-          <div class="part__block-Xanim">
-            <div class="part__block-Xanim-container">
-              <div class="part__block-Xanim-insert">
-                <div class="part__block-Xanim-icon">
-                  <em class="fas fa-check"></em>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="part__block part__block--fourth">
-          <div class="part__block-choice">
-            <div class="part__block-choice-first">
-              Foie gras de canard cuit entier
-            </div>
-            <div class="part__block-choice-second">
-              <span class="part__block-choice-precision"
-                >Confiture de figue et pain toasté</span
-              >
-              <span class="part__block-choice-price">35€ </span>
             </div>
           </div>
           <div class="part__block-Xanim">
@@ -142,12 +119,10 @@
 
         <div class="part__block part__block--first">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">
-              Noix de coquilles Saint-Jacques
-            </div>
+            <div class="part__block-choice-first">Coquilles Saint-Jacques</div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Sur lit de purée de céleri-rave</span
+                >Accompagnées d'une purée de panais</span
               >
               <span class="part__block-choice-price">40€</span>
             </div>
@@ -165,10 +140,10 @@
 
         <div class="part__block part__block--second">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Langoustine poêlée</div>
+            <div class="part__block-choice-first">Magret de canard</div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Purée de patate douce</span
+                >Et parmentier de pommes de terre</span
               >
               <span class="part__block-choice-price">35€</span>
             </div>
@@ -186,10 +161,12 @@
 
         <div class="part__block part__block--third">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Mijoté de queue de boeuf</div>
+            <div class="part__block-choice-first">
+              Pigeonneau d’Ille-et-Vilaine
+            </div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Et riz sauvage aux zestes de citron</span
+                >Sur son lit de gnocchis aux légumes</span
               >
               <span class="part__block-choice-price">44€</span>
             </div>
@@ -213,11 +190,11 @@
         <div class="part__block part__block--first">
           <div class="part__block-choice">
             <div class="part__block-choice-first">
-              Macaron noisette et chocolat
+              Pétales de violettes glacés
             </div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Glace au caramel brun et sel de Guérande</span
+                >Et purée de noisettes</span
               >
               <span class="part__block-choice-price">18€</span>
             </div>
@@ -235,11 +212,9 @@
 
         <div class="part__block part__block--second">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Baba au rhum revisité</div>
+            <div class="part__block-choice-first">Fondant au chocolat</div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision"
-                >Avec son coulis de citron</span
-              >
+              <span class="part__block-choice-precision">Revisité</span>
               <span class="part__block-choice-price">22€</span>
             </div>
           </div>
@@ -257,10 +232,12 @@
         <div class="part__block part__block--third">
           <div class="part__block-choice">
             <div class="part__block-choice-first">
-              Tarte au citron meringuée
+              Millefeuille croustillant
             </div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision">Déstructurée</span>
+              <span class="part__block-choice-precision"
+                >Myrtilles et pâte d’amande</span
+              >
               <span class="part__block-choice-price">23€</span>
             </div>
           </div>
