--- a/pages/delice_des_sens.html
+++ b/pages/delice_des_sens.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="./public/css/style.css" />
+    <link rel="stylesheet" href="../public/css/prefixed/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,25 +14,25 @@
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/0aeff487f3.js" crossorigin="anonymous"></script>
-    <title>La palette du goût</title>
+    <title>Le délice des sens</title>
   </head>
 
   <body>
     <!-- HEADER -->
     <header class="header">
-      <a href="./index.html" class="fas fa-arrow-left"></a>
-      <img class="logo-ohmyfood" src=./public/img/logo/ohmyfood.png alt="logo
+      <a href="../index.html" class="fas fa-arrow-left"></a>
+      <img class="logo-ohmyfood" src=../public/img/logo/ohmyfood.png alt="logo
       d'ohmyfood"/>
     </header>
 
     <div class="one-restaurant-img">
-      <img class="one-restaurant-img__img" src=./public/img/palette_du_gout.jpg
-      alt="plat proposé chez La palette du goût"/>
+      <img class="one-restaurant-img__img" src=../public/img/delice_des_sens.jpg
+      alt="plat proposé chez Le délice des sens"/>
     </div>
 
     <main class="one-restaurant">
       <div class="one-restaurant__information">
-        <div class="one-restaurant__information-name">La palette du goût</div>
+        <div class="one-restaurant__information-name">Le délice des sens</div>
         <div class="one-restaurant__information-heart restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
@@ -49,10 +49,10 @@
 
         <div class="part__block part__block--first">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Fricassée d'escargot</div>
+            <div class="part__block-choice-first">Tartare de thon</div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Au piment d'Espelette</span
+                >Assaisonné au yuzu</span
               >
               <span class="part__block-choice-price">25€</span>
             </div>
@@ -71,11 +71,11 @@
         <div class="part__block part__block--second">
           <div class="part__block-choice">
             <div class="part__block-choice-first">
-              Foie gras de canard mi-cuit
+              Bouchée de homard croustillant
             </div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Et ses copeaux de truffe noire</span
+                >Et sa farandole de petits légumes</span
               >
               <span class="part__block-choice-price">35€</span>
             </div>
@@ -93,11 +93,9 @@
 
         <div class="part__block part__block--third">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Oeuf au plat</div>
+            <div class="part__block-choice-first">Velouté de cèpes</div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision"
-                >Assaisonné à la truffe sur lit de caviar</span
-              >
+              <span class="part__block-choice-precision">Aux truffes</span>
               <span class="part__block-choice-price">20€</span>
             </div>
           </div>
@@ -120,11 +118,11 @@
         <div class="part__block part__block--first">
           <div class="part__block-choice">
             <div class="part__block-choice-first">
-              Filet de boeuf aux herbes
+              Poulet rôti aux herbes de Provence
             </div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Accompagné de sa ribambelle de légumes</span
+                >Et sa crème de truffe</span
               >
               <span class="part__block-choice-price">40€</span>
             </div>
@@ -142,12 +140,10 @@
 
         <div class="part__block part__block--second">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">
-              Parmentier de queue de boeuf
-            </div>
+            <div class="part__block-choice-first">Langouste rôtie</div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >À la truffe noire sur sa purée de panais</span
+                >Et ses légumes de saison</span
               >
               <span class="part__block-choice-price">35€</span>
             </div>
@@ -165,9 +161,11 @@
 
         <div class="part__block part__block--third">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Filet de turbot</div>
+            <div class="part__block-choice-first">Côte de boeuf Angus</div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision">Aux agrumes</span>
+              <span class="part__block-choice-precision"
+                >Et sa purée de panais</span
+              >
               <span class="part__block-choice-price">44€</span>
             </div>
           </div>
@@ -189,9 +187,9 @@
 
         <div class="part__block part__block--first">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Paris-Brest</div>
+            <div class="part__block-choice-first">Farandole de desserts</div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision">Revisité</span>
+              <span class="part__block-choice-precision">Du chef</span>
               <span class="part__block-choice-price">18€</span>
             </div>
           </div>
@@ -208,13 +206,9 @@
 
         <div class="part__block part__block--second">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">
-              Macaron au chocolat d'exception
-            </div>
+            <div class="part__block-choice-first">Crème brulée</div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision"
-                >Et glace à la vanille de Madagascar</span
-              >
+              <span class="part__block-choice-precision">Revisitée</span>
               <span class="part__block-choice-price">22€</span>
             </div>
           </div>
@@ -231,11 +225,9 @@
 
         <div class="part__block part__block--third">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Mousse au chocolat</div>
+            <div class="part__block-choice-first">Tiramisu</div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision"
-                >Au piment d'Espelette et à la truffe noire</span
-              >
+              <span class="part__block-choice-precision">À la noisette</span>
               <span class="part__block-choice-price">23€</span>
             </div>
           </div>
