--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="./public/css/style.css" />
+    <link rel="stylesheet" href="./public/css/prefixed/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -119,7 +119,7 @@
     <section class="container spinner-active">
       <h2>Restaurants</h2>
 
-      <a class="restaurant" href="palette_du_gout.html">
+      <a class="restaurant" href="./pages/palette_du_gout.html">
         <img class="restaurant__img" src=./public/img/palette_du_gout.jpg
         alt="plat proposé chez La palette du goût"/>
         <div class="restaurant__new">Nouveau</div>
@@ -135,7 +135,7 @@
         <div class="restaurant__description">Ménilmontant</div>
       </a>
 
-      <a class="restaurant" href="note_enchantee.html">
+      <a class="restaurant" href="./pages/note_enchantee.html">
         <img class="restaurant__img" src=./public/img/note_enchantee.jpg
         alt="plat proposé chez La note enchantee"/>
         <div class="restaurant__new">Nouveau</div>
@@ -151,7 +151,7 @@
         <div class="restaurant__description">Charonne</div>
       </a>
 
-      <a class="restaurant" href="a_la_francaise.html">
+      <a class="restaurant" href="./pages/a_la_francaise.html">
         <img class="restaurant__img" src=./public/img/a_la_francaise.jpg
         alt="plat proposé chez A la française"/>
         <div class="restaurant__heart">
@@ -166,7 +166,7 @@
         <div class="restaurant__description">Cité Rouge</div>
       </a>
 
-      <a class="restaurant" href="delice_des_sens.html">
+      <a class="restaurant" href="./pages/delice_des_sens.html">
         <img class="restaurant__img" src=./public/img/delice_des_sens.jpg
         alt="plat proposé chez Le délice des sens"/>
         <div class="restaurant__heart">
