--- a/pages/note_enchantee.html
+++ b/pages/note_enchantee.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="./public/css/style.css" />
+    <link rel="stylesheet" href="../public/css/prefixed/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,25 +14,25 @@
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/0aeff487f3.js" crossorigin="anonymous"></script>
-    <title>Le délice des sens</title>
+    <title>La note enchantée</title>
   </head>
 
   <body>
     <!-- HEADER -->
     <header class="header">
-      <a href="./index.html" class="fas fa-arrow-left"></a>
-      <img class="logo-ohmyfood" src=./public/img/logo/ohmyfood.png alt="logo
+      <a href="../index.html" class="fas fa-arrow-left"></a>
+      <img class="logo-ohmyfood" src=../public/img/logo/ohmyfood.png alt="logo
       d'ohmyfood"/>
     </header>
 
     <div class="one-restaurant-img">
-      <img class="one-restaurant-img__img" src=./public/img/delice_des_sens.jpg
-      alt="plat proposé chez Le délice des sens"/>
+      <img class="one-restaurant-img__img" src=../public/img/note_enchantee.jpg
+      alt="plat proposé chez La note enchantée"/>
     </div>
 
     <main class="one-restaurant">
       <div class="one-restaurant__information">
-        <div class="one-restaurant__information-name">Le délice des sens</div>
+        <div class="one-restaurant__information-name">La note enchantée</div>
         <div class="one-restaurant__information-heart restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
@@ -49,10 +49,10 @@
 
         <div class="part__block part__block--first">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Tartare de thon</div>
+            <div class="part__block-choice-first">Ravioles de foie gras</div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Assaisonné au yuzu</span
+                >Accompagnés de leur crème à la truffe</span
               >
               <span class="part__block-choice-price">25€</span>
             </div>
@@ -70,12 +70,10 @@
 
         <div class="part__block part__block--second">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">
-              Bouchée de homard croustillant
-            </div>
+            <div class="part__block-choice-first">Caviar osciètre</div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Et sa farandole de petits légumes</span
+                >Sur blini à la farine de blé noir</span
               >
               <span class="part__block-choice-price">35€</span>
             </div>
@@ -93,10 +91,37 @@
 
         <div class="part__block part__block--third">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Velouté de cèpes</div>
+            <div class="part__block-choice-first">
+              Homard et espuma de potiron
+            </div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision">Aux truffes</span>
+              <span class="part__block-choice-precision"
+                >Mariné aux zestes d'orange</span
+              >
               <span class="part__block-choice-price">20€</span>
+            </div>
+          </div>
+          <div class="part__block-Xanim">
+            <div class="part__block-Xanim-container">
+              <div class="part__block-Xanim-insert">
+                <div class="part__block-Xanim-icon">
+                  <em class="fas fa-check"></em>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="part__block part__block--fourth">
+          <div class="part__block-choice">
+            <div class="part__block-choice-first">
+              Foie gras de canard cuit entier
+            </div>
+            <div class="part__block-choice-second">
+              <span class="part__block-choice-precision"
+                >Confiture de figue et pain toasté</span
+              >
+              <span class="part__block-choice-price">35€ </span>
             </div>
           </div>
           <div class="part__block-Xanim">
@@ -118,11 +143,11 @@
         <div class="part__block part__block--first">
           <div class="part__block-choice">
             <div class="part__block-choice-first">
-              Poulet rôti aux herbes de Provence
+              Noix de coquilles Saint-Jacques
             </div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Et sa crème de truffe</span
+                >Sur lit de purée de céleri-rave</span
               >
               <span class="part__block-choice-price">40€</span>
             </div>
@@ -140,10 +165,10 @@
 
         <div class="part__block part__block--second">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Langouste rôtie</div>
+            <div class="part__block-choice-first">Langoustine poêlée</div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Et ses légumes de saison</span
+                >Purée de patate douce</span
               >
               <span class="part__block-choice-price">35€</span>
             </div>
@@ -161,10 +186,10 @@
 
         <div class="part__block part__block--third">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Côte de boeuf Angus</div>
+            <div class="part__block-choice-first">Mijoté de queue de boeuf</div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Et sa purée de panais</span
+                >Et riz sauvage aux zestes de citron</span
               >
               <span class="part__block-choice-price">44€</span>
             </div>
@@ -187,9 +212,13 @@
 
         <div class="part__block part__block--first">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Farandole de desserts</div>
+            <div class="part__block-choice-first">
+              Macaron noisette et chocolat
+            </div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision">Du chef</span>
+              <span class="part__block-choice-precision"
+                >Glace au caramel brun et sel de Guérande</span
+              >
               <span class="part__block-choice-price">18€</span>
             </div>
           </div>
@@ -206,9 +235,11 @@
 
         <div class="part__block part__block--second">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Crème brulée</div>
+            <div class="part__block-choice-first">Baba au rhum revisité</div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision">Revisitée</span>
+              <span class="part__block-choice-precision"
+                >Avec son coulis de citron</span
+              >
               <span class="part__block-choice-price">22€</span>
             </div>
           </div>
@@ -225,9 +256,11 @@
 
         <div class="part__block part__block--third">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Tiramisu</div>
+            <div class="part__block-choice-first">
+              Tarte au citron meringuée
+            </div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision">À la noisette</span>
+              <span class="part__block-choice-precision">Déstructurée</span>
               <span class="part__block-choice-price">23€</span>
             </div>
           </div>
