--- a/pages/palette_du_gout.html
+++ b/pages/palette_du_gout.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="./public/css/style.css" />
+    <link rel="stylesheet" href="../public/css/prefixed/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,25 +14,25 @@
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/0aeff487f3.js" crossorigin="anonymous"></script>
-    <title>À la française</title>
+    <title>La palette du goût</title>
   </head>
 
   <body>
     <!-- HEADER -->
     <header class="header">
-      <a href="./index.html" class="fas fa-arrow-left"></a>
-      <img class="logo-ohmyfood" src=./public/img/logo/ohmyfood.png alt="logo
+      <a href="../index.html" class="fas fa-arrow-left"></a>
+      <img class="logo-ohmyfood" src=../public/img/logo/ohmyfood.png alt="logo
       d'ohmyfood"/>
     </header>
 
     <div class="one-restaurant-img">
-      <img class="one-restaurant-img__img" src=./public/img/a_la_francaise.jpg
-      alt="plat proposé chez À la française"/>
+      <img class="one-restaurant-img__img" src=../public/img/palette_du_gout.jpg
+      alt="plat proposé chez La palette du goût"/>
     </div>
 
     <main class="one-restaurant">
       <div class="one-restaurant__information">
-        <div class="one-restaurant__information-name">À la française</div>
+        <div class="one-restaurant__information-name">La palette du goût</div>
         <div class="one-restaurant__information-heart restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
@@ -49,12 +49,10 @@
 
         <div class="part__block part__block--first">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">
-              Tartare de poulpe acidulé
-            </div>
+            <div class="part__block-choice-first">Fricassée d'escargot</div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Aux zestes d'orange</span
+                >Au piment d'Espelette</span
               >
               <span class="part__block-choice-price">25€</span>
             </div>
@@ -73,11 +71,11 @@
         <div class="part__block part__block--second">
           <div class="part__block-choice">
             <div class="part__block-choice-first">
-              Velouté de légumes d'antan
+              Foie gras de canard mi-cuit
             </div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Carotte, panais, topinambour</span
+                >Et ses copeaux de truffe noire</span
               >
               <span class="part__block-choice-price">35€</span>
             </div>
@@ -95,9 +93,11 @@
 
         <div class="part__block part__block--third">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Soupe à l'oignon</div>
+            <div class="part__block-choice-first">Oeuf au plat</div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision">Revisitée</span>
+              <span class="part__block-choice-precision"
+                >Assaisonné à la truffe sur lit de caviar</span
+              >
               <span class="part__block-choice-price">20€</span>
             </div>
           </div>
@@ -119,10 +119,12 @@
 
         <div class="part__block part__block--first">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Coquilles Saint-Jacques</div>
+            <div class="part__block-choice-first">
+              Filet de boeuf aux herbes
+            </div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Accompagnées d'une purée de panais</span
+                >Accompagné de sa ribambelle de légumes</span
               >
               <span class="part__block-choice-price">40€</span>
             </div>
@@ -140,10 +142,12 @@
 
         <div class="part__block part__block--second">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Magret de canard</div>
+            <div class="part__block-choice-first">
+              Parmentier de queue de boeuf
+            </div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Et parmentier de pommes de terre</span
+                >À la truffe noire sur sa purée de panais</span
               >
               <span class="part__block-choice-price">35€</span>
             </div>
@@ -161,13 +165,9 @@
 
         <div class="part__block part__block--third">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">
-              Pigeonneau d’Ille-et-Vilaine
-            </div>
+            <div class="part__block-choice-first">Filet de turbot</div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision"
-                >Sur son lit de gnocchis aux légumes</span
-              >
+              <span class="part__block-choice-precision">Aux agrumes</span>
               <span class="part__block-choice-price">44€</span>
             </div>
           </div>
@@ -189,13 +189,9 @@
 
         <div class="part__block part__block--first">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">
-              Pétales de violettes glacés
-            </div>
+            <div class="part__block-choice-first">Paris-Brest</div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision"
-                >Et purée de noisettes</span
-              >
+              <span class="part__block-choice-precision">Revisité</span>
               <span class="part__block-choice-price">18€</span>
             </div>
           </div>
@@ -212,9 +208,13 @@
 
         <div class="part__block part__block--second">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">Fondant au chocolat</div>
+            <div class="part__block-choice-first">
+              Macaron au chocolat d'exception
+            </div>
             <div class="part__block-choice-second">
-              <span class="part__block-choice-precision">Revisité</span>
+              <span class="part__block-choice-precision"
+                >Et glace à la vanille de Madagascar</span
+              >
               <span class="part__block-choice-price">22€</span>
             </div>
           </div>
@@ -231,12 +231,10 @@
 
         <div class="part__block part__block--third">
           <div class="part__block-choice">
-            <div class="part__block-choice-first">
-              Millefeuille croustillant
-            </div>
+            <div class="part__block-choice-first">Mousse au chocolat</div>
             <div class="part__block-choice-second">
               <span class="part__block-choice-precision"
-                >Myrtilles et pâte d’amande</span
+                >Au piment d'Espelette et à la truffe noire</span
               >
               <span class="part__block-choice-price">23€</span>
             </div>
