Amélioration du positionnement du coeur

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -13,7 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700;900&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/0aeff487f3.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/0aeff487f3.js"
+      crossorigin="anonymous"
+    ></script>
     <title>À la française</title>
   </head>
 
@@ -33,9 +36,9 @@
     <main class="one-restaurant">
       <div class="one-restaurant__information">
         <div class="one-restaurant__information-name">À la française</div>
-        <div class="one-restaurant__information-heart restaurant__heart">
-          <div class="restaurant__heart-container">
-            <div class="restaurant__heart-insert">
+        <div class="one-restaurant__information-heart heart">
+          <div class="heart-container">
+            <div class="heart-insert">
               <em class="far fa-heart"></em>
               <em class="fas fa-heart"></em>
             </div>
