--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;300;500;700;900&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/0aeff487f3.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/0aeff487f3.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Oh My food</title>
   </head>
 
@@ -123,62 +126,69 @@
         <img class="restaurant__img" src=./public/img/palette_du_gout.jpg
         alt="plat proposé chez La palette du goût"/>
         <div class="restaurant__new">Nouveau</div>
-        <div class="restaurant__heart">
-          <div class="restaurant__heart-container">
-            <div class="restaurant__heart-insert">
-              <em class="far fa-heart"></em>
-              <em class="fas fa-heart"></em>
+        <div class="restaurant__name">La palette du goût</div>
+        <div class="restaurant__description">
+          <div class="restaurant__description-text">Ménilmontant</div>
+          <div class="restaurant__description-fav heart">
+            <div class="heart-container">
+              <div class="heart-insert">
+                <em class="far fa-heart"></em>
+                <em class="fas fa-heart"></em>
+              </div>
             </div>
           </div>
         </div>
-        <div class="restaurant__name">La palette du goût</div>
-        <div class="restaurant__description">Ménilmontant</div>
       </a>
-
       <a class="restaurant" href="./pages/note_enchantee.html">
         <img class="restaurant__img" src=./public/img/note_enchantee.jpg
         alt="plat proposé chez La note enchantee"/>
         <div class="restaurant__new">Nouveau</div>
-        <div class="restaurant__heart">
-          <div class="restaurant__heart-container">
-            <div class="restaurant__heart-insert">
-              <em class="far fa-heart"></em>
-              <em class="fas fa-heart"></em>
+        <div class="restaurant__name">La note enchantée</div>
+        <div class="restaurant__description">
+          <div class="restaurant__description-text">Charonne</div>
+          <div class="restaurant__description-fav heart">
+            <div class="heart-container">
+              <div class="heart-insert">
+                <em class="far fa-heart"></em>
+                <em class="fas fa-heart"></em>
+              </div>
             </div>
           </div>
         </div>
-        <div class="restaurant__name">La note enchantée</div>
-        <div class="restaurant__description">Charonne</div>
       </a>
 
       <a class="restaurant" href="./pages/a_la_francaise.html">
         <img class="restaurant__img" src=./public/img/a_la_francaise.jpg
         alt="plat proposé chez A la française"/>
-        <div class="restaurant__heart">
-          <div class="restaurant__heart-container">
-            <div class="restaurant__heart-insert">
-              <em class="far fa-heart"></em>
-              <em class="fas fa-heart"></em>
+        <div class="restaurant__name">À la française</div>
+        <div class="restaurant__description">
+          <div class="restaurant__description-text">Cité Rouge</div>
+          <div class="restaurant__description-fav heart">
+            <div class="heart-container">
+              <div class="heart-insert">
+                <em class="far fa-heart"></em>
+                <em class="fas fa-heart"></em>
+              </div>
             </div>
           </div>
         </div>
-        <div class="restaurant__name">À la française</div>
-        <div class="restaurant__description">Cité Rouge</div>
       </a>
 
       <a class="restaurant" href="./pages/delice_des_sens.html">
         <img class="restaurant__img" src=./public/img/delice_des_sens.jpg
         alt="plat proposé chez Le délice des sens"/>
-        <div class="restaurant__heart">
-          <div class="restaurant__heart-container">
-            <div class="restaurant__heart-insert">
-              <em class="far fa-heart"></em>
-              <em class="fas fa-heart"></em>
+        <div class="restaurant__name">Le délice des sens</div>
+        <div class="restaurant__description">
+          <div class="restaurant__description-text">Folie-Méricourt</div>
+          <div class="restaurant__description-fav heart">
+            <div class="heart-container">
+              <div class="heart-insert">
+                <em class="far fa-heart"></em>
+                <em class="fas fa-heart"></em>
+              </div>
             </div>
           </div>
         </div>
-        <div class="restaurant__name">Le délice des sens</div>
-        <div class="restaurant__description">Folie-Méricourt</div>
       </a>
     </section>
 
